Change select font-size in add-resource process

--- a/opentreemap/treemap/css/sass/partials/pages/_addtree.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_addtree.scss
@@ -89,6 +89,9 @@
                 form {
                     margin: 0;
                 }
+                select {
+                    font-size: 1.2rem;
+                }
 
                 .form-search {
                     margin: 0;
