--- a/opentreemap/treemap/css/sass/partials/pages/_sidebar.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_sidebar.scss
@@ -153,7 +153,7 @@
             color: white;
             float: left;
             margin-right: 10px;
-            margin-bottom: 10px;
+            margin-bottom: 0;
 
             > i {
                 margin-top: 1px;
@@ -166,15 +166,15 @@
             float: left;
             margin: 2px 0 0;
             line-height: 2.1rem;
-            width: 280px;
             color: $primary-color;
         }
         .benefit-content {
             clear: both;
-            margin: 0;
+            margin: 0 0 0 38px;
             font-size: 1.3rem;
             font-weight: 700;
             color: $subtext-color;
+            display: block;
         }
     }
     .benefit-tree-count {
