--- a/opentreemap/treemap/css/sass/partials/pages/_addtree.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_addtree.scss
@@ -52,7 +52,7 @@
 
             .add-step-header {
                 background: $light-gray-color;
-                color: darken($light-gray-color, 30%);
+                color: darken($subtext-color, 30%);
                 font-size: 1.2rem;
                 font-weight: 700;
                 text-transform: uppercase;
@@ -156,6 +156,7 @@
         position: relative;
         font-size: 2.4rem;
         top: 10px;
-        right: 10px;
+        right: 20px;
+        opacity: 0.5;
     }
 }
