--- a/opentreemap/treemap/templates/treemap/partials/map_add_resource.html
+++ b/opentreemap/treemap/templates/treemap/partials/map_add_resource.html
@@ -4,12 +4,12 @@
 {% with nsteps=5 %}
 <div class="sidebar-inner">
     <a href="javascript:;" class="close cancelBtn small">×</a>
-    <h3>{% trans "Add a Resource" %}</h3>
+    <h3>{% trans "Add a Watershed Solution" %}</h3>
     <div class="add-step-container">
         <div class="add-step active">
-            <div class="add-step-header">{% trans "Select Resource Type" %}</div>
+            <div class="add-step-header">{% trans "Select Watershed Solution Type" %}</div>
             <div class="add-step-content">
-                <label>{% trans "Resource Type" %}</label>
+                <label>{% trans "Watershed Solution Type" %}</label>
                 {% for cls in resource_classes %}
                     <input type="radio"
                            name="addResourceType"
@@ -23,16 +23,16 @@
             </div>
             {% include 'treemap/partials/step_controls.html' with first=True %}
         </div>
-        {% include "treemap/partials/step_set_location.html" with feature_name="resource" %}
+        {% include "treemap/partials/step_set_location.html" with feature_name="watershed solution" %}
         <div class="add-step">
             <div class="add-step-header">{% trans "Indicate Nearby Roof Area" %}</div>
             <div class="add-step-content">
-                <div class="alert alert-info">Drag and outline the nearby roof area that would drain into your resource.</div>
+                <div class="alert alert-info">Drag and outline the nearby roof area that would drain into your watershed solution.</div>
             </div>
             {% include 'treemap/partials/step_controls.html' %}
         </div>
         <div class="add-step">
-            <div class="add-step-header">{% trans "About this Resource" %}</div>
+            <div class="add-step-header">{% trans "About this Watershed Solution" %}</div>
             <div class="add-step-content">
                 <form id="add-resource-form" onsubmit="return false;">
                   {# Added dynamically when resource type is chosen #}
@@ -41,7 +41,7 @@
             {% include 'treemap/partials/step_controls.html' %}
         </div>
         <div class="add-step">
-            <div class="add-step-header">{% trans "Finalize this resource" %}</div>
+            <div class="add-step-header">{% trans "Finalize this Watershed Solution" %}</div>
             <div class="add-step-content">
                 <h3 class="summaryHead"></h3>
                 <h6 class="summarySubhead"></h6>
@@ -50,12 +50,12 @@
                 <hr/>
                 <span>
                     <input type="radio" name="addResourceOptions" value="new" id="addresource-addnew" /><label for="addresource-addnew">
-                        {% trans "Add another resource" %}
+                        {% trans "Add another Watershed Solution" %}
                     </label>
                 </span>
                 <span>
                     <input type="radio" name="addResourceOptions" value="edit" id="addresource-viewdetails" disabled class="disabled"/><label for="addresource-viewdetails">
-                        {% trans "Continue editing this resource" %}
+                        {% trans "Continue editing this Watershed Solution" %}
                     </label>
                 </span>
                 <span>
