Give max-width to benefit titles
* Helps avoid overflow problems for long benefit names

--- a/opentreemap/treemap/css/sass/partials/pages/_sidebar.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_sidebar.scss
@@ -167,6 +167,7 @@
             margin: 2px 0 0;
             line-height: 2.1rem;
             color: $primary-color;
+            max-width: 265px;
         }
         .benefit-content {
             clear: both;
