Fixup button groups
The feature/resource changed segmented the group so that the "Done"
button was always being ignored.

Fixes #1247
Fixes #1246

--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -35,17 +35,17 @@
                 <hr/>
                 <label>{% trans "After I add this tree..." %}</label>
                 <span>
-                    <input type="radio" name="addTreeOptions" value="copy" id="addtree-addsame" /><label for="addtree-addsame">
+                    <input type="radio" name="addFeatureOptions" value="copy" id="addtree-addsame" /><label for="addtree-addsame">
                         {% trans "Add another tree with these details" %}
                     </label>
                 </span>
                 <span>
-                    <input type="radio" name="addTreeOptions" value="new" id="addtree-addnew" /><label for="addtree-addnew">
+                    <input type="radio" name="addFeatureOptions" value="new" id="addtree-addnew" /><label for="addtree-addnew">
                         {% trans "Add another tree with new details" %}
                     </label>
                 </span>
                 <span>
-                    <input type="radio" name="addTreeOptions" value="edit" id="addtree-viewdetails" /><label for="addtree-viewdetails">
+                    <input type="radio" name="addFeatureOptions" value="edit" id="addtree-viewdetails" /><label for="addtree-viewdetails">
                         {% trans "Continue editing this tree" %}
                     </label>
                 </span>
