Show the correct plot/resource marker on detail page

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -138,6 +138,7 @@
 
       // mapFeatureOptions is defined in a script block of the super-template
       mapFeatureOptions.treeIdColumn = '#tree-id-column';
+      mapFeatureOptions.useTreeIcon = true;
       var mapFeature = mapFeatureModule.init(mapFeatureOptions);
 
       plot.init({
