--- a/opentreemap/treemap/templates/treemap/resource_detail.html
+++ b/opentreemap/treemap/templates/treemap/resource_detail.html
@@ -60,6 +60,7 @@
           resource = require('treemap/resource');
 
       // mapFeatureOptions is defined in a script block of the super-template
+      mapFeatureOptions.useTreeIcon = false;
       var mapFeature = mapFeatureModule.init(mapFeatureOptions);
 
       resource.init({
