--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -32,7 +32,7 @@
         </li>
         <li>
           <a data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addResource"
-             data-always-enable="True" data-action='addresource'>{% trans "Add a Watershed Solution" %}</a>
+             data-always-enable="True" data-action='addresource'>{% trans "Add a" %} {{ term.Resource }}</a>
         </li>
       </ul>
     </li>
@@ -120,9 +120,10 @@
          data-action='addresource'
          data-feature="add_plot"
          data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
-         data-disabled-title="{% trans "Adding watershed solutions is not available to all users" %}"
+         data-disabled-title=
+           "{% blocktrans with resources=terms.resources %}Adding {{ resources }} is not available to all users {% endblocktrans %}"
          data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addResource"
-         disabled="disabled"><i class="icon-plus"></i> {% trans "Add a Watershed Solution" %}</a>
+         disabled="disabled"><i class="icon-plus"></i> {% trans "Add a" %} {{ term.Resource }}</a>
       {% endif %}
     <a class="btn btn-primary addBtn"
        data-action='addtree'
